<resources>
    <string name="app_name">MonsterTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!--slider-->
    <string name="user">游客</string>
    <string name="gift">送她一只</string>
    <!--play_view-->
    <string name="newGame">新的游戏</string>
    <string name="newGame_msg">掀起一波新高潮</string>
    <string name="oldRecord">旧的回忆</string>
    <string name="oldRecord_msg">暂无回忆</string>
    <string name="record1">当前跳动2017次  &gt;</string>
    <string name="record2">一大波高潮  &gt;</string>
    <!--health_view-->
    <string name="healthText">暂无健康数据</string>
    <string name="healthDescribe1">紧致，让高潮一直来</string>
    <string name="healthDescribe2">快用『凯格尔运动』测一次吧~</string>
    <string name="helathSport">凯格尔运动  &gt;</string>
    <string name="helathRecord">我要记经期  &gt;</string>
    <string name="helathJinzhi">紧致</string>
    <string name="helathJinzhiTimes">0紧</string>
    <string name="helathChijiu">持久</string>
    <string name="helathChijiuTimes">0持</string>
    <string name="helathWendu">温度</string>
    <string name="helathWenduTimes">0温</string>
    <!--say_view-->
    <string name="userName">纵横天下</string>
    <string name="userImage"></string>
    <string name="type">［ 闲聊 ］</string>
    <string name="content">天上白玉京，十二楼五城。仙人抚我顶，结发受长生。</string>
    <string name="vContent">评论内容...</string>
    <string name="visitCount">512</string>
    <string name="praiseCount">125</string>
    <string name="readContent">阅读</string>
    <string name="readCount">999</string>
</resources>
