<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/health_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/health_bg"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/helathSport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:text="@string/helathSport"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helathChijiu"
        tools:ignore="UnknownIdInLayout"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/helathRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/helathRecord"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/helathSport"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintVertical_bias="0.19999999"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/healthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/healthText"
        android:textColor="?android:attr/colorActivatedHighlight"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="64dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/healthDescribe1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/healthDescribe1"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_light"
        android:textSize="18sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/healthText"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/healthDescribe2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/healthDescribe2"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/healthDescribe1"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/healthBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/sis_healthy_circle_bule"
        tools:ignore="ContentDescription"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@+id/healthDescribe2"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/healthGreen"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.534" />

    <ImageView
        android:id="@+id/healthGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/sis_healthy_circle_green"
        tools:ignore="ContentDescription"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@+id/healthDescribe2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/healthPink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/sis_healthy_circle_pink"
        tools:ignore="ContentDescription"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@+id/healthDescribe2"
        app:layout_constraintLeft_toRightOf="@+id/healthGreen"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.458" />

    <TextView
        android:id="@+id/helathJinzhi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/helathJinzhi"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/healthBlue"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/helathChijiu"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.45" />

    <TextView
        android:id="@+id/helathChijiu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/helathChijiu"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/healthGreen" />

    <TextView
        android:id="@+id/helathWendu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/helathWendu"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintLeft_toRightOf="@+id/helathChijiu"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/healthPink" />

    <TextView
        android:id="@+id/helathJinzhiTimes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/helathJinzhiTimes"
        app:layout_constraintBottom_toBottomOf="@+id/healthBlue"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@+id/healthBlue"
        app:layout_constraintRight_toRightOf="@+id/healthBlue"
        app:layout_constraintTop_toTopOf="@+id/healthBlue" />

    <TextView
        android:id="@+id/helathChijiuTimes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/helathChijiuTimes"
        app:layout_constraintLeft_toLeftOf="@+id/healthGreen"
        app:layout_constraintRight_toRightOf="@+id/healthGreen"
        app:layout_constraintTop_toTopOf="@+id/healthGreen"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toBottomOf="@+id/healthGreen"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/helathWenduTimes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/helathWenduTimes"
        app:layout_constraintBottom_toBottomOf="@+id/healthPink"
        app:layout_constraintLeft_toLeftOf="@+id/healthPink"
        app:layout_constraintRight_toRightOf="@+id/healthPink"
        app:layout_constraintTop_toTopOf="@+id/healthPink"
        app:layout_constraintHorizontal_bias="0.5" />

</android.support.constraint.ConstraintLayout>